// Vitest Snapshot v1

exports[`dts > getDeclaration 1`] = `
"// generated by unplugin-vue-components
// We suggest you to commit this file into source control
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
  export interface ComponentCustomProperties {
    vLoading: typeof import('test/directive/Loading')['default']
  }
}

export {}
"
`;

exports[`dts > writeDeclaration - keep unused 1`] = `
"// generated by unplugin-vue-components
// We suggest you to commit this file into source control
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    SomeComp: typeof import('test/component/SomeComp')['default']
    TestComp: typeof import('test/component/TestComp')['default']
  }
  export interface ComponentCustomProperties {
    vDirective: typeof import('foo')
    vLoading: typeof import('test/directive/Loading')['default']
    vSome: typeof import('test/directive/Some')['default']
  }
}

export {}
"
`;

exports[`dts > writeDeclaration 1`] = `
"// generated by unplugin-vue-components
// We suggest you to commit this file into source control
// Read more: https://github.com/vuejs/core/pull/3399
import '@vue/runtime-core'

declare module '@vue/runtime-core' {
  export interface GlobalComponents {
    RouterLink: typeof import('vue-router')['RouterLink']
    RouterView: typeof import('vue-router')['RouterView']
    TestComp: typeof import('test/component/TestComp')['default']
  }
  export interface ComponentCustomProperties {
    vLoading: typeof import('test/directive/Loading')['default']
  }
}

export {}
"
`;
